--- a/docs/source/.static/custom.css
+++ b/docs/source/.static/custom.css
@@ -1,6 +1,7 @@
 /* Added code to display tables without horizontal scrollbars */
 .wy-table-responsive table td, .wy-table-responsive table th {
     white-space: normal;
+    word-break: break-word;
 }
 
 .wy-nav-content{
