--- a/docs/source/.static/custom.css
+++ b/docs/source/.static/custom.css
@@ -4,6 +4,10 @@
     word-break: break-word;
 }
 
+.wy-table-responsive table th.stub{
+    vertical-align: top;
+}
+
 .wy-nav-content{
     max-width: none;
 }
