--- a/docs/source/.static/custom.css
+++ b/docs/source/.static/custom.css
@@ -4,7 +4,7 @@
     word-break: break-word;
 }
 
-.wy-table-responsive table th.stub{
+.wy-table-responsive table th stub{
     vertical-align: top;
 }
 
