--- a/docs/source/.static/custom.css
+++ b/docs/source/.static/custom.css
@@ -1,8 +1,13 @@
 /* Added code to display tables without horizontal scrollbars */
-.wy-table-responsive table td, .wy-table-responsive table th {
+
+/* Added code to display tables without horizontal scrollbars */
+table.docutils td, table.docutils th {
+    white-space: normal !important;
+}
+/* .wy-table-responsive table td, .wy-table-responsive table th {
     white-space: normal;
     word-break: break-word;
-}
+}*/
 
 .wy-table-responsive table th stub{
     vertical-align: top;
